[gd_scene load_steps=2 format=3 uid="uid://c2ywp7hgxgdre"]

[ext_resource type="Script" path="res://scripts/HomeMenu.gd" id="1_lfsv4"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lfsv4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 465.0
offset_top = 235.0
offset_right = 811.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60

[node name="LaunchButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Lancer une partie"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Cr√©dits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Quitter"

[connection signal="pressed" from="VBoxContainer/LaunchButton" to="." method="_on_launch_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
